fixed overflow issue on carousel

--- a/scss/components/_carousel.scss
+++ b/scss/components/_carousel.scss
@@ -1,4 +1,6 @@
 .partners-carousel {
+  overflow-x: hidden;
+
   &-title {
     @include headingStyles();
     font-size: size(md);
